<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/elephant_back">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_by_step_painting_tutorial"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>
    <Button
        android:id="@+id/btn_list"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/list"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonstyle"
        android:onClick="btnsClick"/>
    <Button
        android:id="@+id/btn_abt_us"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/about_us"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonstyle"
        android:onClick="btnsClick"/>
    <Button
        android:id="@+id/btn_cnt_us"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/contact_us"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonstyle"
        android:onClick="btnsClick"/>
    <Button
        android:id="@+id/btn_ext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/exit"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttonstyle"
        android:onClick="btnsClick"/>
</LinearLayout>