<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".list_Activity"
    android:orientation="vertical"
    android:weightSum="4">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow">

        <TextView
            android:id="@+id/txt_header_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_by_step_painting_tutorial"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txt_home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_title"
            android:textSize="21sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="18dp"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageButton
            android:id="@+id/imgb_goat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="btns_click"
            android:background="@drawable/goat"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo" />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/imgb_ostrich"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="btns_click"
            android:background="@drawable/ostrich"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo_1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <ImageButton
            android:id="@+id/imgb_cow"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:onClick="btns_click"
            android:background="@drawable/cow"
            android:contentDescription="@string/todo_2" />
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/imgb_chick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btns_click"
            android:background="@drawable/chick"
            android:contentDescription="@string/todo_3" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp">

        <ImageButton
            android:id="@+id/imgb_zebra"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btns_click"
            android:background="@drawable/zebra"
            android:contentDescription="@string/todo_4" />
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/imgb_frog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btns_click"
            android:background="@drawable/frog"
            android:contentDescription="@string/todo_5" />

    </LinearLayout>

</LinearLayout>
