<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="6">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/step_by_step_painting_tutorial"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#222"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="10dp"/>
            <ImageView
                android:id="@+id/img_Music"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:onClick="btns_click"
                android:src="@drawable/music_on" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/img_show"
            android:layout_width="270dp"
            android:layout_height="250dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_texts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/txt_step_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="#d60ae1"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txt_step"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/step"
            android:textSize="25sp"
            android:textColor="#0a35e1"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:padding="20dp">
        <Button
            android:id="@+id/btn_prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:onClick="btns_click"
            android:text="@string/previous"
            android:textSize="20sp"
            android:background="@drawable/buttonstyle_2"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </LinearLayout>
        <Button
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textStyle="bold"
            android:onClick="btns_click"
            android:textSize="20sp"
            android:background="@drawable/buttonstyle_2"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">
        <Button
            android:id="@+id/btn_start"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle_2"
            android:onClick="btns_click"
            android:text="@string/start"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>